feat: #27 add py-icon component, remove blur-icon component, change blur-device-switch component directory

--- a/src/Resources/app/administration/src/component/device/switch/template.html.twig
+++ b/src/Resources/app/administration/src/component/device/switch/template.html.twig
@@ -16,7 +16,7 @@
             }"
             :class="['blur-device-switch-icon']"
         >
-            <blur-icon
+            <py-icon 
                 :name="viewport.icon"
                 size="16"
             />
