--- a/src/Resources/app/administration/src/component/iap/subscription-card/template.html.twig
+++ b/src/Resources/app/administration/src/component/iap/subscription-card/template.html.twig
@@ -23,8 +23,8 @@
                     alignItems: 'baseline',
                     gap: '10px',
                 }">
-                <blur-icon
-                    name="blurph-check-square-offset-bold"
+                <py-icon
+                    name="check-square-offset-bold"
                     size="16" />
                 <span 
                     v-if="feature.label" 
