--- a/src/Resources/app/administration/src/component/py/base-field/template.html.twig
+++ b/src/Resources/app/administration/src/component/py/base-field/template.html.twig
@@ -29,7 +29,7 @@
                 color: 'var(--color-icon-critical-default)',
                 fontWeight: '600' 
             }" />
-        <blur-icon
+        <py-icon
             v-if="tooltip"
             v-tooltip="{
                 message: tooltip,
@@ -38,7 +38,7 @@
                 verticalAlign: 'text-top',
                 cursor: 'pointer'
             }"
-            name="blurph-info-bold"
+            name="info-bold"
             :size="14"
             color="var(--color-interaction-primary-default)" />
     </div>
