--- a/src/Resources/app/administration/src/component/py/icon/template.html.twig
+++ b/src/Resources/app/administration/src/component/py/icon/template.html.twig
@@ -1,9 +1,7 @@
 <span
-    class="sw-icon sw-icon--fill"
+    class="py-icon"
     :class="classes"
     :style="styles"
     :aria-hidden="decorative"
-    :data-testid="'sw-icon__' + name"
-    v-on="$listeners"
     v-html="iconSvgData"
 ></span>
