--- a/src/Resources/app/administration/src/component/slide/selection/item/template.html.twig
+++ b/src/Resources/app/administration/src/component/slide/selection/item/template.html.twig
@@ -31,8 +31,8 @@
             class="elysium-slide-selection-item-dragger"
             title="Drag slide"
         >
-            <blur-icon
-                name="blurph-dots-three-bold"
+            <py-icon
+                name="dots-three-bold"
                 :size="14"
             />
         </div>
@@ -45,8 +45,8 @@
                 class="elysium-slide-selection-item-action"
                 @click="positionUp"
             >
-                <blur-icon
-                    name="blurph-caret-up"
+                <py-icon
+                    name="caret-up"
                     :size="14"
                 />
             </div>
@@ -54,8 +54,8 @@
                 class="elysium-slide-selection-item-action"
                 @click="positionDown"
             >
-                <blur-icon
-                    name="blurph-caret-down"
+                <py-icon
+                    name="caret-down"
                     :size="14"
                 />
             </div>
@@ -63,8 +63,8 @@
                 class="elysium-slide-selection-item-action"
                 @click="editSlide"
             >
-                <blur-icon
-                    name="blurph-pencil-simple-line"
+                <py-icon
+                    name="pencil-simple-line"
                     :size="14"
                 />
             </div>
@@ -72,8 +72,8 @@
                 class="elysium-slide-selection-item-action"
                 @click="removeSlide"
             >
-                <blur-icon
-                    name="blurph-trash"
+                <py-icon
+                    name="trash"
                     :size="14"
                 />
             </div>
