--- a/src/Resources/app/administration/src/component/slides/detail/template.html.twig
+++ b/src/Resources/app/administration/src/component/slides/detail/template.html.twig
@@ -51,8 +51,8 @@
                         variant="primary"
                         :disabled="isLoading"
                     >
-                        <blur-icon
-                            name="blurph-caret-down-bold"
+                        <py-icon
+                            name="caret-down-bold"
                             size="16"
                         />
                     </mt-button>
