--- a/src/Resources/app/administration/src/component/slides/form/container/template.html.twig
+++ b/src/Resources/app/administration/src/component/slides/form/container/template.html.twig
@@ -60,7 +60,7 @@
         },
     })"
     :title="$tc('blurElysium.general.spacing')"
-    title-icon="blurph-ruler-bold">
+    title-icon="ruler-bold">
     
     <blur-column>
         <py-number-field
@@ -113,7 +113,7 @@
     })"
     :title="$tc('blurElysium.general.alignment')"
     :description="$tc('blurElysiumSlides.forms.displayContainer.alignmentDescription')"
-    title-icon="blurph-arrows-out-line-horizontal-bold">
+    title-icon="arrows-out-line-horizontal-bold">
     
     <blur-column>
         <py-select-field
