--- a/src/Resources/app/administration/src/component/slides/form/content/template.html.twig
+++ b/src/Resources/app/administration/src/component/slides/form/content/template.html.twig
@@ -23,7 +23,7 @@
     gap
     padding
     :title="$tc('blurElysium.general.spacing')"
-    title-icon="blurph-ruler-bold"
+    title-icon="ruler-bold"
     :style="viewStyle({
         mobile: { 
             borderBottom: '1px solid var(--color-border-secondary-default)',
@@ -62,7 +62,7 @@
         },
     })"
     :title="$tc('blurElysium.general.alignment')"
-    title-icon="blurph-arrows-out-line-horizontal-bold">
+    title-icon="arrows-out-line-horizontal-bold">
     
     <blur-column>
         <py-select-field
