--- a/src/Resources/app/administration/src/component/slides/form/general/template.html.twig
+++ b/src/Resources/app/administration/src/component/slides/form/general/template.html.twig
@@ -32,7 +32,7 @@
     gap
     padding
     :title="$tc('blurElysiumSlides.forms.slideHeadline.label')"
-    title-icon="blurph-text-h-one-bold"
+    title-icon="text-h-one-bold"
     :style="viewStyle({
         mobile: {
             'border-bottom': '1px solid var(--color-border-secondary-default)',
@@ -90,7 +90,7 @@
     gap
     padding
     :title="$tc('blurElysiumSlides.forms.slideDescription.label')"
-    title-icon="blurph-textbox-bold"
+    title-icon="textbox-bold"
     :style="viewStyle({
         mobile: {
             '--blur-section-gap-y': '8px',
