--- a/src/Resources/app/administration/src/component/slides/form/slide/template.html.twig
+++ b/src/Resources/app/administration/src/component/slides/form/slide/template.html.twig
@@ -2,7 +2,7 @@
     gap
     padding
     :title="$tc('blurElysiumSlides.forms.slideBackground.label')"
-    title-icon="blurph-paint-bucket-bold"
+    title-icon="paint-bucket-bold"
     :style="viewStyle({
         mobile: { 
             borderBottom: '1px solid var(--color-border-secondary-default)',
@@ -23,7 +23,7 @@
     gap
     padding
     :title="$tc('blurElysiumSlides.forms.slideGradient.label')"
-    title-icon="blurph-circle-half-bold"
+    title-icon="circle-half-bold"
     :style="viewStyle({
         mobile: { 
             borderBottom: '1px solid var(--color-border-secondary-default)',
@@ -79,7 +79,7 @@
         },
     })"
     :title="$tc('blurElysium.general.spacing')"
-    title-icon="blurph-ruler-bold">
+    title-icon="ruler-bold">
 
     <blur-column :cols="12">
         <py-number-field
@@ -117,7 +117,7 @@
     padding
     :title="$tc('blurElysium.general.alignment')"
     :description="$tc('blurElysiumSlides.forms.displaySlide.alignmentDescription')"
-    title-icon="blurph-arrows-out-line-horizontal-bold"
+    title-icon="arrows-out-line-horizontal-bold"
     :style="viewStyle({
         mobile: { 
             borderBottom: '1px solid var(--color-border-secondary-default)',
