--- a/src/Resources/app/administration/src/component/utilities/section/template.html.twig
+++ b/src/Resources/app/administration/src/component/utilities/section/template.html.twig
@@ -15,7 +15,7 @@
             :class="['blur-section-title']"
             v-if="title"
         >
-            <blur-icon
+            <py-icon
                 v-if="titleIcon"
                 :name="titleIcon"
                 :size="16"
