fix: #65 Reorganize slide configuration forms

--- a/src/Resources/app/administration/src/component/py/icon/template.html.twig
+++ b/src/Resources/app/administration/src/component/py/icon/template.html.twig
@@ -1,7 +1,6 @@
-<span
+<div
     class="py-icon"
     :class="classes"
     :style="styles"
     :aria-hidden="decorative"
-    v-html="iconSvgData"
-></span>
+    v-html="iconSvgData" />
