fix: #69 correct slide radius if cover image or video is set

--- a/src/Resources/views/storefront/component/blur-elysium-slide/includes/cover-image.html.twig
+++ b/src/Resources/views/storefront/component/blur-elysium-slide/includes/cover-image.html.twig
@@ -68,6 +68,7 @@
                         aria-label="{{ slideCoverLabel }}"
                     {% endif %}
                     class="blur-elysium-slide-cover-image" 
+                    style="border-radius: var(--slide-border-radius, 0px);"
                     {% if lazyLoading is same as(true) %}
                         loading="lazy"
                     {% endif %} />
