--- a/src/Resources/views/storefront/component/blur-elysium-slide/includes/cover-video.html.twig
+++ b/src/Resources/views/storefront/component/blur-elysium-slide/includes/cover-video.html.twig
@@ -1,7 +1,8 @@
 {% block blur_elysium_slide_cover_video %}
     {% if slideData.slideCoverVideo %}
         <video autoplay muted loop
-            class="blur-elysium-slide-cover-video">
+            class="blur-elysium-slide-cover-video"
+            style="border-radius: var(--slide-border-radius, 0px);">
             <source src="{{slideData.slideCoverVideo.url}}" type="{{slideData.slideCoverVideo.mimeType}}">
         </video>
     {% endif %}
