--- a/src/Resources/app/storefront/src/scss/_elysium-block.scss
+++ b/src/Resources/app/storefront/src/scss/_elysium-block.scss
@@ -6,11 +6,6 @@
     }
 }
 
-.blur-elysium-block {
-    padding: 0;
-    grid-template-columns: var(--columns);
-
-    &.one-col {
-        --columns: minmax(0, 1fr);
-    }
+.blur-elysium-block.one-col {
+    --columns: minmax(0, 1fr);
 }
