--- a/src/Resources/views/storefront/section/cms-section-blur-elysium-section.html.twig
+++ b/src/Resources/views/storefront/section/cms-section-blur-elysium-section.html.twig
@@ -41,7 +41,8 @@
         {% block cms_blur_elysium_section %}
             <div 
                 data-cms-section-id="{{ section.id }}"
-                class="{{ blurElysiumSectionClasses|join(' ') }}">
+                class="{{ blurElysiumSectionClasses|join(' ') }}"
+                style="display: var(--elysium-section-display, grid); grid-template-columns: repeat(var(--elysium-section-columns, 12), minmax(0, 1fr)); gap: var(--elysium-section-gap, 0px); padding: var(--elysium-section-py, 0px) var(--elysium-section-px, 0px); align-items: var(--elysium-section-align-items, stretch);">
 
                 {% for block in section.blocks %}
 
@@ -54,7 +55,7 @@
                         <div 
                             class="cms-block-container blur-elysium-section-block"
                             data-cms-block-id="{{block.id}}"
-                            style="{{blurElysiumBlockStyles|join(';')}}">
+                            style="{{blurElysiumBlockStyles|join(';')}}; grid-column-start: var(--elysium-section-block-col-start, auto); grid-column-end: var(--elysium-section-block-col-end, span 12); grid-row-end: var(--elysium-section-block-row-end, auto); order: var(--elysium-section-block-order, 999); padding: var(--elysium-section-block-pt, 0px) var(--elysium-section-block-pe, 0px) var(--elysium-section-block-pb, 0px) var(--elysium-section-block-ps, 0px);">
 
                             {% if block.customFields.elysiumBlockSettings.viewports %}
                                 {% apply spaceless %} 
