fix: #71 and #72 slide preview button styles

--- a/src/Resources/app/administration/src/component/slide/preview/content/template.html.twig
+++ b/src/Resources/app/administration/src/component/slide/preview/content/template.html.twig
@@ -15,6 +15,7 @@
     <mt-button
         v-if="showButton"
         size="default"
+        :style="buttonStyles"
         :target="slide.slideSettings?.slide?.linking?.openExternal ? '_blank' : '_self'">
         {{slide.buttonLabel}}
     </mt-button>
