fix: adjust focus image if product linking is set, include product.cover.media assoc in data reseolver

--- a/src/Resources/app/administration/src/component/slide/preview/container/template.html.twig
+++ b/src/Resources/app/administration/src/component/slide/preview/container/template.html.twig
@@ -1,6 +1,5 @@
 <div
     :style="containerStyles">
     <elysium-slide-preview-content />
-    <elysium-slide-preview-focus-image
-        v-if="slide.presentationMedia" />
+    <elysium-slide-preview-focus-image />
 </div>
