--- a/src/Resources/app/administration/src/component/slide/builder/config/linking/template.html.twig
+++ b/src/Resources/app/administration/src/component/slide/builder/config/linking/template.html.twig
@@ -96,6 +96,20 @@
         />
 
         <mt-switch
+            v-if="slide.slideSettings.slide?.linking?.type === 'product'"
+            @change="slide.slideSettings.slide.linking.showProductTitle = $event"
+            :checked="slide.slideSettings.slide.linking.showProductTitle"
+            :label="$tc('blurElysiumSlides.forms.slideLinking.showProductTitle')"
+        />
+
+        <mt-switch
+            v-if="slide.slideSettings.slide?.linking?.type === 'product'"
+            @change="slide.slideSettings.slide.linking.showProductDescription = $event"
+            :checked="slide.slideSettings.slide.linking.showProductDescription"
+            :label="$tc('blurElysiumSlides.forms.slideLinking.showProductDescription')"
+        />
+
+        <mt-switch
             @change="slide.slideSettings.slide.linking.openExternal = $event"
             :checked="slide.slideSettings.slide.linking.openExternal"
             :label="$tc('blurElysiumSlides.forms.slideLinkingOpenExternal')"
